feat: pivot to Public API by removing authentication and user ownership
